<resources>
    <string name="app_name">GrupoShots</string>
    <string name="action_settings">Settings</string>
    <string name="enter_email">Correo</string>
    <string name="enter_pasword">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_promocion">PromocionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="confirmar_contra">Confirmar Contraseña </string>
    <string name="Usuario">Usuario</string>
    <string name="registrar">REGISTRARSE</string>
    <string name="promos">PROMOCIONES</string>
    <string name="nombre">Nombre</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="lugar">Selecciona tu lugar</string>
    <string name="Numero_del_lugar">Numero del Lugar</string>
    <string name="fecha">Fecha</string>
    <string name="Reserva">Reservar</string>
    <string name="lugar_reserva">BOA</string>
    <string name="lugar_reserva2">Las Kawas</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Sala">Sala</string>

</resources>
